ft(respond-to-ride-request): user can respond to ride request
update user profile to show the number of rides taken
add controller to fetch all ride requests for a user
show the status of each ride of the user profile

[(Finishes) ft/#159494178/consume-respond-to-request-endpiont]

--- a/UI/ride-requests.html
+++ b/UI/ride-requests.html
@@ -10,6 +10,18 @@
   <link rel="stylesheet" href="./styles/form.css">
   <link rel="stylesheet" href="./styles/rides.css">
   <title>Ride my way</title>
+  <style>
+    .message {
+      display: none;
+      background: #FAFBFC;
+      color: #06d19c;
+      border-radius: 5px;
+      padding: 10px 15px;
+      font-size: 1rem;
+      text-align: left;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 
 <body>
@@ -52,6 +64,7 @@
       <div class="box ride-requests">
         <div class="box__header text-center">
           <h4 class="box__title">Ride Notifications</h4>
+          <div class="message"></div>
         </div>
 
       </div>
